@@ -1,3 +1,9 @@
+User johns
+Date:
+
+    Makes 4:3 and 16:9 display format configurable.
+    Don't use DVB display format.
+
 User Zoolook
 Date: Tue Jan  1 12:49:19 CET 2013
 
